--- a/index.html
+++ b/index.html
@@ -512,6 +512,61 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 <td></td>
 </tr>
 
+	<tr>
+<td>06/11/2024, Wed</td>
+<td>Lecture 11: An Introduction to Reinforcement Learning with Applications in Quantitative Finance [<a href="slides/Lecture10_reinforcement.pdf"> slides </a>]  and Final Project Initialization  [<a href="project3/project2.pdf"> project2.pdf </a>]
+	<br>
+	<ul>[ Reference ]:
+		<li> Google DeepMind's Deep Q-learning playing Atari Breakout:
+		[<a href="https://www.youtube.com/watch?v=V1eYniJ0Rnk"> youtube </a>]
+		</li>
+		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
+		<li> Deep Q-Learning Pytorch Tutorial: [<a href="https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html"> link </a> ]
+		</li>
+		<li> A Tutorial of Reinforcement Learning for Quantitative Trading: 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/tutorial/Tutorial_FinRL_stock_trading_NeurIPS_2018_3run.ipynb"> Tutorial </a>]
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/tutorial/Tutorial_FinRL_replicate_3run.ipynb"> Replicate </a>]
+		</li>
+		<li> FinRL: Deep Reinforcement Learning for Quantitative Finance
+		[<a href="https://github.com/AI4Finance-Foundation/FinRL"> GitHub </a>]
+		</li>
+		<li> Reinforcement Learning and Supervised Learning for Quantitative Finance: [<a href="https://github.com/Ceruleanacg/Personae/blob/master/README.md"> link </a>]
+		</li>
+		<li> Hierarchical Reinforced Trader (HRT): A Bi-Level Approach for Optimizing Stock Selection and Execution, by Zijie Zhao, Roy E. Welsch. 
+			[<a href="https://arxiv.org/abs/2410.14927"> arXiv:2410.14927 </a>]
+		</li>
+		<li> Prof. Michael Kearns, University of Pennsyvania, Algorithmic Trading and Machine Learning, 
+			Simons Institute at Berkeley [<a href="https://simons.berkeley.edu/talks/michael-kearns-2015-11-19"> link </a> ]
+		</li>
+	</ul>
+		<br>
+	<ul>[ Final Project ]		
+		<li> Description: [<a href="project3/project2.pdf"> project2.pdf </a>]
+		</li>
+		<li> Kaggle Contests  [<a href="project3/project3_Crypto_M5.pdf"> slides </a>]
+		</li>
+		<!---
+		<li> Cryptocurrency Trading Project [<a href="project3/project3_CryptoTrading.pdf"> slides (pdf) </a>]
+		</li>	
+		--->
+		<li> Large Language Models with Financial Analysis [<a href="project3/project3_LLM+finance.pdf"> slides (pdf) </a>] </li>
+		<p>
+		</ul>
+	
+	<ul>[ Reference ]
+		<li> Kaggle: G-Research Crypto Forecasting. [<a href="https://www.kaggle.com/c/g-research-crypto-forecasting/"> link </a>]
+		</li>
+		<li> Kaggle: M5 Forecasting - Accuracy, Estimate the unit sales of Walmart retail goods. [<a href="https://www.kaggle.com/c/m5-forecasting-accuracy"> link </a>]
+		</li>
+		<li> Kaggle: M5 Forecasting - Uncertainty, Estimate the uncertainty distribution of Walmart unit sales. [<a href="https://www.kaggle.com/c/m5-forecasting-uncertainty"> link </a>]
+		</li>
+	</ul>
+
+</td>
+<td>Y.Y.</td>
+<td></td>
+</tr>
+
 <!----
 
 	
@@ -703,37 +758,6 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 <td></td>
 </tr>
 
-	<tr>
-<td>06/11/2024, Wed</td>
-<td>Lecture 11: An Introduction to Reinforcement Learning with Applications in Quantitative Finance [<a href="slides/Lecture10_reinforcement.pdf"> slides </a>]  
-	<br>
-	<ul>[ Reference ]:
-		<li> Google DeepMind's Deep Q-learning playing Atari Breakout:
-		[<a href="https://www.youtube.com/watch?v=V1eYniJ0Rnk"> youtube </a>]
-		</li>
-		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
-		<li> Deep Q-Learning Pytorch Tutorial: [<a href="https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html"> link </a> ]
-		</li>
-		<li> A Tutorial of Reinforcement Learning for Quantitative Trading: 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/tutorial/Tutorial_FinRL_stock_trading_NeurIPS_2018_3run.ipynb"> Tutorial </a>]
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/tutorial/Tutorial_FinRL_replicate_3run.ipynb"> Replicate </a>]
-		</li>
-		<li> FinRL: Deep Reinforcement Learning for Quantitative Finance
-		[<a href="https://github.com/AI4Finance-Foundation/FinRL"> GitHub </a>]
-		</li>
-		<li> Reinforcement Learning and Supervised Learning for Quantitative Finance: [<a href="https://github.com/Ceruleanacg/Personae/blob/master/README.md"> link </a>]
-		</li>
-		<li> Hierarchical Reinforced Trader (HRT): A Bi-Level Approach for Optimizing Stock Selection and Execution, by Zijie Zhao, Roy E. Welsch. 
-			[<a href="https://arxiv.org/abs/2410.14927"> arXiv:2410.14927 </a>]
-		</li>
-		<li> Prof. Michael Kearns, University of Pennsyvania, Algorithmic Trading and Machine Learning, 
-			Simons Institute at Berkeley [<a href="https://simons.berkeley.edu/talks/michael-kearns-2015-11-19"> link </a> ]
-		</li>
-	</ul>
-</td>
-<td>Y.Y.</td>
-<td></td>
-</tr>
 
 
 	<tr>
