--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 	
 	<tr>
 <td>11/19/2025, Wed</td>
-<td>Lecture 12: Seminar and Student Presentations.
+<td>Lecture 11: Seminar and Student Presentations.
 	<br>	
 	<ul>[ Seminar ]
 		<li><B>Title: Application of AI Technology in the Securities and Finance Industry</B>. [<a href=""> slides </a>]</li>  
@@ -602,7 +602,7 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 		<li>  Ming Mei, Li Xuzhi, Chen Yilin and Xie Xiaoxiao. Predicting Home Credit Default by Using Light Gradient Boosting Model. </li>
 		<li>  Kuo Yang. MAFS5440 Project 1: Home Credit Default Risk [<a href=""> slides </a>]</li>
 		<li>  Xinyu Xu, Zilong Pan and Hongen Tang. Home Credit Default Risk Assessment Based on LightGBMLinks to an external site. </li>
-		<li>  TKedeng Qiu, Zewen Wan, Yifei Song and Jiarui Jiang. Project 1: Home Credit Default Risk. </li>
+		<li>  Kedeng Qiu, Zewen Wan, Yifei Song and Jiarui Jiang. Project 1: Home Credit Default Risk. </li>
 	</ul>	
 </td>
 <td>Y.Y.</td>
